- Fixed bug #44575 (parse_ini_file comment # line problems). (Arnaud)
- Fixed bug #44135 (PDO MySQL does not support CLIENT_FOUND_ROWS). (Johannes,
  chx1975 at gmail dot com)
- Fixed bug #44153 (pdo->errorCode() returns NULL when there are no errors). 
  (David C.)
- Fixed bug #44154 (pdo->errorInfo() always have three elements in the
  returned array). (David C.)


02 Sep 2008, PHP 5.3.0 Alpha 2
- Removed special treatment of "/tmp" in sessions for open_basedir.
  Note: This undocumented behaviour was introduced in 5.2.2. (Alexey)
- Removed shebang line check from CGI sapi (checked by scanner). (Dmitry)

- Changed session_start() to return false when session startup fails. (Jani)
- Changed property_exists() to check the existence of a property independent of
  accessibility (like method_exists()). (Felipe)
- Changed array_reduce() to allow mixed $initial (Christian Seiler)

- Added function preg_filter() that does grep and replace in one go. (Marcus)
- Added system independent realpath() implementation which caches intermediate
  directories in realpath-cache. (Dmitry)
- Added optional clear_realpath_cache and filename parameters to
  clearstatcache(). (Jani, Arnaud)
- Added litespeed SAPI module. (George Wang)
- Added ext/hash support to ext/session's ID generator. (Sara)
- Added quoted_printable_encode() function. (Tony)
- Added stream_context_set_default() function. (Davey Shafik)
- Added optional "is_xhtml" parameter to nl2br() which makes the function
  output <br> when false and <br /> when true (FR #34381). (Kalle)
- Added PHP_MAXPATHLEN constant (maximum length of a path). (Pierre)

- Improved Windows support and portability for stat(), touch(), filemtime(),
  filesize() and related functions. (Pierre)

- Fixed a bug causing miscalculations with the "last <weekday> of <n> month"
  relative time string. (Derick)

- Fixed bug #46110 (XMLWriter - openmemory() and openuri() leak memory on
  multiple calls). (Ilia)